--- a/IbornProcesses/package.json
+++ b/IbornProcesses/package.json
@@ -21,15 +21,16 @@
     "node": "~0.8.0"
   },
   "dependencies": {
-    "underscore": "~1.3.3",
     "express": "~2.5.9",
     "mustache": "~0.4.0",
-    "socket.io": "~0.9.13"
+    "reveal-ga": "^0.1.0",
+    "socket.io": "~0.9.13",
+    "underscore": "~1.3.3"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.2.0",
     "grunt-contrib-cssmin": "~0.4.1",
-    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-uglify": "~1.0.1",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-sass": "~0.2.2",
     "grunt-contrib-connect": "~0.2.0",
