--- a/IbornProcesses/package.json
+++ b/IbornProcesses/package.json
@@ -1,12 +1,14 @@
 {
   "name": "reveal.js",
-  "version": "2.5.0",
+  "version": "3.5.0",
   "description": "The HTML Presentation Framework",
   "homepage": "http://lab.hakim.se/reveal-js",
   "subdomain": "revealjs",
+  "main": "js/reveal.js",
   "scripts": {
-    "test": "grunt jshint",
-    "start": ""
+    "test": "grunt test",
+    "start": "grunt serve",
+    "build": "grunt"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -18,29 +20,25 @@
     "url": "git://github.com/hakimel/reveal.js.git"
   },
   "engines": {
-    "node": "~0.8.0"
-  },
-  "dependencies": {
-    "express": "~2.5.9",
-    "mustache": "~0.4.0",
-    "reveal-ga": "^0.1.0",
-    "socket.io": "~0.9.13",
-    "underscore": "~1.3.3"
+    "node": ">=4.0.0"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.4.1",
-    "grunt-contrib-uglify": "~1.0.1",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-sass": "~0.2.2",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt-zip": "~0.7.0",
-    "grunt": "~0.4.0"
+    "express": "~4.14.0",
+    "grunt": "~1.0.1",
+    "grunt-autoprefixer": "~3.0.3",
+    "grunt-cli": "~1.2.0",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-qunit": "~1.2.0",
+    "grunt-contrib-uglify": "~0.9.2",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-sass": "~1.2.0",
+    "grunt-retire": "~0.3.10",
+    "grunt-zip": "~0.17.1",
+    "mustache": "~2.2.1",
+    "node-sass": "~3.13.0",
+    "socket.io": "^1.4.8"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
-    }
-  ]
+  "license": "MIT"
 }
